Closed
Bug 1605906
Opened 1 year ago
Closed 1 year ago
[Wayland][CompositorOGL] Toggling titlebar caused crash
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla73
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox71 | --- | unaffected |
firefox72 | --- | unaffected |
firefox73 | --- | fixed |
People
(Reporter: sotaro, Assigned: sotaro)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
STR
- [1] Forced to enable CompositorOGL with the following prefs
- gfx.webrender.force-disabled=true
- layers.acceleration.force-enabled=true
- [2] Restart Firefox
- [3] Go into Customize and toggle the titlebar.
Actual result
[3] caused a crash
Tested on Ubuntu 18.04
Assignee | ||
Updated•1 year ago
|
Summary: [Wayland][WebRender] Toggling titlebar caused crash → [Wayland][CompositorOGL] Toggling titlebar caused crash
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Assignee: nobody → sotaro.ikeda.g
Assignee | ||
Comment 1•1 year ago
|
||
Assignee | ||
Comment 2•1 year ago
•
|
||
The crash was almost same to Bug 1605893.
Assignee | ||
Comment 3•1 year ago
|
||
Keywords: regression
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f8748c266e9a Add Pause/Resume handling to CompositorOGL for Wayland r=aosmond
Comment 6•1 year ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 1 year ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Updated•1 year ago
|
status-firefox71:
--- → unaffected
status-firefox72:
--- → unaffected
status-firefox-esr68:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•