Bug 1605906 - Add Pause/Resume handling to CompositorOGL for Wayland r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D58210